Bug 93313 - [BXT-P/APL] No response when switching consoles
Summary: [BXT-P/APL] No response when switching consoles
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Olivier Berthier
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-10 11:13 UTC by cprigent
Modified: 2016-04-18 20:03 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description cprigent 2015-12-10 11:13:26 UTC
Q4 stack release setup:
-----------------------
Hardware 
Platform: Broxton P A0 Platform 
CPU Name : Intel(R) @ 1.2 GHz (family: 6, model: 92, stepping: 8) – 4 cores
SoC : BROXTON-P A0
CRB : Apollo Lake RVP Fab1 
BIOS (IFWI Version): APLK_IFWI_X64_R_2015_44_3_00
BIOS : APLKRVPA.X64.0105.R45.1510272122
CSE FW : 3.0.0.1049
KSC : 1.04
Linux distribution: Ubuntu 15.10 64 bits
Kernel: tag testing 2015-11-20 from http://cgit.freedesktop.org/drm-intel/tag/?h=drm-intel-testing&id=drm-intel-testing-2015-11-20
Bios v105_48
xorg-server-1.18.0 from http://cgit.freedesktop.org/xorg/xserver
libdrm-2.4.65 from http://cgit.freedesktop.org/mesa/drm/
xf86-video-intel 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
mesa-11.0.4 from http://cgit.freedesktop.org/mesa/mesa/
libva-1.6.1 from http://cgit.freedesktop.org/libva/
vaapi-intel-driver 1.6.1 from http://cgit.freedesktop.org/vaapi/intel-driver
DMC 1.06 firmware from https://01.org/linuxgraphics/intel-linux-graphics-firmwares

Steps:
------
1. Boot DUT
2. Switch to another console using Ctrl+Alt+Fn
3. Repeat step 2 several times

Actual result:
--------------
3. After several tries, there is no response

Expected result:
-----------------
3. You can switch to any console without problem
Comment 1 cprigent 2015-12-10 11:16:06 UTC
Assigned to Olivier to provide:
Xorg.0.log
dmesg (with "drm.debug=0x06")
xorg.conf
output of "xrandr --verbose"
For GPU hang: cat /sys/class/drm/card0/error | gzip > error.gz
Comment 2 Humberto Israel Perez Rodriguez 2015-12-15 04:07:26 UTC
With the following configuration the issues is not present :


Linux distribution: Ubuntu 15.10 LTS 64 bits
xorg-server-1.18.0 from http://cgit.freedesktop.org/xorg/xserver
libdrm-2.4.65 from http://cgit.freedesktop.org/mesa/drm/
xf86-video-intel 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
mesa-11.0.4 from http://cgit.freedesktop.org/mesa/mesa/
libva-1.6.2.pre1 from http://cgit.freedesktop.org/libva/
vaapi-intel-driver 1.6.2.pre1 from http://cgit.freedesktop.org/vaapi/intel-driver
cairo 1.14.4 from http://cgit.freedesktop.org/cairo
Rendercheck 1.5 from http://cgit.freedesktop.org/xorg/app/rendercheck

Kernel: tag testing 2015-11-20 from http://cgit.freedesktop.org/drm-intel/tag/?h=drm-intel-testing&id=drm-intel-testing-2015-11-20
Bios v105_48
libva-1.6.1 from http://cgit.freedesktop.org/libva/
vaapi-intel-driver 1.6.1 from http://cgit.freedesktop.org/vaapi/intel-driver

Configuration used : SD eDP
Comment 3 Matt Roper 2015-12-19 01:30:23 UTC
This sounds like the same bug I fixed here:

    http://patchwork.freedesktop.org/patch/68713/

Can you try that patch and see if it solves your problem?
Comment 4 Matt Roper 2016-01-06 19:39:48 UTC
(In reply to Matt Roper from comment #3)
> This sounds like the same bug I fixed here:
> 
>     http://patchwork.freedesktop.org/patch/68713/
> 
> Can you try that patch and see if it solves your problem?

This patch has been merged to -nightly, so I think this bug should be fixed now.  If this turns out to not be the case, please re-open.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.